...
                            <subviews>
                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ZeC-f7-4f2" userLabel="Loading Indicator">
                                    <rect key="frame" x="0.0" y="0.0" width="88.5" height="30"/>
                                </activityIndicatorView>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTp-kL-R3d">
                                    <rect key="frame" x="98.5" y="0.0" width="88.5" height="30"/>
                                    <state key="normal" title="Refresh" image="arrow.clockwise" catalog="system"/>
                                    <connections>
                                        <action selector="onRefreshPressed:" destination="-1" eventType="touchUpInside" id="Zoe-eE-XnG"/>
                                    </connections>
                                </button>
                            </subviews>
                        </stackView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jJ-nu-ExN">
                            <rect key="frame" x="187" y="0.0" width="187" height="30"/>
                            <state key="normal" title="Add Todo Item"/>
                            <connections>
                                <action selector="addTodoPressed:" destination="-1" eventType="touchUpInside" id="srT-Mh-Bfv"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
...
